--- a/Resume.html
+++ b/Resume.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Resume</title>
+    <title>Resume</title>
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f0f8ff; margin: 20px;">
 
@@ -33,13 +34,19 @@
             <ul>
                 <li>HTML - HyperText Markup Language</li>
                 <li>CSS - Cascading Style Sheets</li>
-                <li>JavaScript (Learning)</li>
+                <li>JS - JavaScript </li>
                 <li>C++</li>
                 <li>Python</li>
             </ul>
         </section>
+        <section>
+            <iframe src="" frameborder="0">
 
+            </iframe>
+        </section>
     </main>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="sambhav-sehgal-35896a334" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/sambhav-sehgal-35896a334?trk=profile-badge">Sambhav Sehgal</a></div>
+              
 
     <footer style="text-align: center; margin-top: 40px; padding-top: 20px; border-top: 1px solid #ccc;">
         <p>Contact me at: sambhavsehgal007@gmail.com</p>
